--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 dash>=1.7.0
-datashader==0.8.0
-dask[dataframe]==2.30.0
-distributed==2.30.1
-numba==0.47.0
-llvmlite==0.31.0
-numpy==1.19.4
-pandas==1.1.4
-pyproj==2.6.1.post1
-python-snappy==0.5.4
-fastparquet==0.4.1
-requests==2.24.0
-fsspec==0.8.4
-gunicorn==20.0.4
+datashader>=0.8.0
+dask[dataframe]>=2.30.0
+distributed>=2.30.1
+numba==0.53.0
+llvmlite>=0.31.0
+numpy>=1.19.4
+pandas>=1.1.4
+pyproj>=2.6.1.post1
+python-snappy>=0.5.4
+fastparquet>=0.4.1
+requests>=2.24.0
+fsspec>=0.8.4
+gunicorn>=20.0.4
